#!/usr/bin/env python3
# -*- coding: utf-8 -*-

'''
@date: 2021-04
@author: nboutin
'''


class Entity:

    def __init__(self, key: str):
        self.key: str = key
